k8s/hello/hellopodslb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hellopod-1
  labels:
    app: hello
spec:
  containers:
    - name: hello
      image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: hellopod-2
  labels:
    app: hello
spec:
  containers:
    - name: hello
      image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: hellopod-3
  labels:
    app: hello
spec:
  containers:
    - name: hello
      image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
